Assignment/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>HiddenCurrency2__c</fullName>
        <label>HiddenCurrency2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiddenCurrency__c</fullName>
        <label>HiddenCurrency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiddenPercent__c</fullName>
        <label>HiddenPercent</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <label>Home Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                    <default>true</default>
                    <label>en</label>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Metal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <description>This field is to store Survey Date</description>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
</CustomObject>